[gd_scene load_steps=10 format=3 uid="uid://bxj5mc38f2slx"]

[ext_resource type="Texture2D" uid="uid://btrjt00xdyok1" path="res://assets/Shooter Traps/Sprites/Seashell/Pearl Idle/1.png" id="1_na6ih"]
[ext_resource type="Script" uid="uid://cesmwylpxx6nb" path="res://scripts/pearl.gd" id="1_trrel"]
[ext_resource type="Texture2D" uid="uid://256d60pnqslk" path="res://assets/Shooter Traps/Sprites/Seashell/Pearl Destroyed/1.png" id="3_0e8u3"]
[ext_resource type="Texture2D" uid="uid://ch8dtg4d6t7" path="res://assets/Shooter Traps/Sprites/Seashell/Pearl Destroyed/2.png" id="4_m0xna"]
[ext_resource type="Texture2D" uid="uid://ch2ta70embhfu" path="res://assets/Shooter Traps/Sprites/Seashell/Pearl Destroyed/3.png" id="5_n8ha3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bt3nf"]
radius = 5.0

[sub_resource type="Animation" id="Animation_lrlpo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_na6ih")]
}

[sub_resource type="Animation" id="Animation_46e23"]
resource_name = "destroyed"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_0e8u3"), ExtResource("4_m0xna"), ExtResource("5_n8ha3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdfsc"]
_data = {
&"RESET": SubResource("Animation_lrlpo"),
&"destroyed": SubResource("Animation_46e23")
}

[node name="Pearl" type="Area2D"]
monitorable = false
script = ExtResource("1_trrel")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_na6ih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bt3nf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kdfsc")
}
autoplay = "RESET"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
